--- a/ImNotAfkApp/ImNotAfkApp.csproj
+++ b/ImNotAfkApp/ImNotAfkApp.csproj
@@ -46,15 +46,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\ConfigData.cs" />
     <Compile Include="Configuration\ConfigurationView.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Configuration\ConfigurationView.Designer.cs">
       <DependentUpon>ConfigurationView.cs</DependentUpon>
     </Compile>
+    <Compile Include="state\PROGRAM_STATE.cs" />
+    <Compile Include="state\THEMEMODE_STATE.cs" />
+    <Compile Include="Folder.cs" />
+    <Compile Include="state\EXECUTION_STATE.cs" />
+    <Compile Include="KeepAliveLogic.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemTray\MainContextMenu.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="SystemTray\SystemTrayApplicationContext.cs" />
+    <Compile Include="ExtensionMethods\EnumExtensionMethods.cs" />
     <EmbeddedResource Include="Configuration\ConfigurationView.resx">
       <DependentUpon>ConfigurationView.cs</DependentUpon>
     </EmbeddedResource>
