--- a/PreventLockScreenApp/PreventLockScreenApp.csproj
+++ b/PreventLockScreenApp/PreventLockScreenApp.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{61F9BE92-288D-4CBC-9EBA-DAEF1B91BEE9}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>ImNotAFK</RootNamespace>
-    <AssemblyName>ImNotAFK</AssemblyName>
+    <RootNamespace>PreventLockScreen</RootNamespace>
+    <AssemblyName>PreventLockScreen</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
