Add Endless mode & AFK prevention; improve theming/UI
- Add "Endless mode" option: app can run indefinitely, disables end time/progress bar, and updates status label/UI accordingly.
- Add "Prevent AFK (Teams)" option: new AfkPrevention class jiggles mouse if idle >4.5min to avoid Teams "Away" status.
- Persist both options in config; expose in ConfigurationDialog.
- Refactor theming: all dialogs/controls use centralized palette (Themes.cs), with recursive theming and improved dark mode.
- Update DataGridView, buttons, and progress bar visuals for clarity and consistency.
- Relabel "Amend" buttons to "Save"; modernize fonts/layout.
- Minor code cleanup and improved comments/documentation.

--- a/PreventPowerSaveApp/PreventPowerSaveApp.csproj
+++ b/PreventPowerSaveApp/PreventPowerSaveApp.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Client\Views\SchedulerDialog.Designer.cs">
       <DependentUpon>SchedulerDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="CoreElements\AfkPrevention.cs" />
     <Compile Include="CoreElements\KeyboardHook.cs" />
     <Compile Include="CoreElements\PowerUtilities.cs" />
     <Compile Include="CoreElements\SchedulerCollection.cs" />
